// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with aria label 1`] = `
<input
  aria-label="Edit input"
  autoComplete="on"
  className="editable-input--wrapper"
  dir="auto"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder=""
/>
`;

exports[`renders correctly with empty props 1`] = `
<input
  autoComplete="on"
  className="editable-input--wrapper"
  dir="auto"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder=""
  value=""
/>
`;
